--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons-kit": "^2.0.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
